create getUsers
