# docs/swagger.json
@@ -18,6 +18,10 @@
     {
       "name": "Auth",
       "description": "Auth operations."
+    },
+    {
+      "name": "Users",
+      "description": "Users operations."
     }
   ],
   "paths": {
@@ -280,6 +284,57 @@
           }
         }
       }
+    },
+    "/users": {
+      "get": {
+        "tags": [
+          "Users"
+        ],
+        "summary": "Get users info",
+        "operationId": "getUserInfo",
+        "description": "Get info about current user",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Get info about current user",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "required": [
+                    "status",
+                    "message",
+                    "data"
+                  ],
+                  "properties": {
+                    "status": {
+                      "type": "integer",
+                      "example": 200
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "Successfully found info about current user"
+                    },
+                    "data": {
+                      "$ref": "#/components/schemas/users"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "$ref": "#/components/responses/401"
+          },
+          "500": {
+            "$ref": "#/components/responses/500"
+          }
+        }
+      }
     }
   },
   "components": {
@@ -340,6 +395,49 @@
             "type": "string",
             "description": "Token for access",
             "example": "5H4mA9kN4mMs5teK8gobAU4qblreV+DjjQby3kxz"
+          }
+        }
+      },
+      "users": {
+        "type": "object",
+        "required": [
+          "_id",
+          "name",
+          "email",
+          "createdAt",
+          "updatedAt"
+        ],
+        "properties": {
+          "_id": {
+            "type": "string",
+            "description": "Users id",
+            "example": "685e5951b883f8c0dbc569a0"
+          },
+          "name": {
+            "type": "string",
+            "minLength": 3,
+            "maxLength": 16,
+            "description": "Users name",
+            "example": "Steve"
+          },
+          "email": {
+            "type": "string",
+            "maxLength": 128,
+            "pattern": "/.+@.+\\..+/",
+            "description": "Users email",
+            "example": "steve@main.kraft"
+          },
+          "createdAt": {
+            "type": "string",
+            "format": "date-time",
+            "description": "Contact created at",
+            "example": "2025-06-27T08:41:53.166Z"
+          },
+          "updatedAt": {
+            "type": "string",
+            "format": "date-time",
+            "description": "Contact updated at",
+            "example": "2025-06-27T08:41:53.166Z"
           }
         }
       }
