# src/routers/index.js
@@ -1,11 +1,12 @@
 import { Router } from 'express';
 import authRouter from './auth.js';
+import usersRouter from './users.js';
 
 const router = new Router();
 
 router.use('/api/auth', authRouter);
 
-// router.use('/api/users');
+router.use('/api/users', usersRouter);
 
 // router.use('/api/categories');
 
